--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -34,4 +34,10 @@
         android:layout_height="wrap_content"
         android:text="MEMORY" />
 
+    <Button
+        android:id="@+id/btn_opengl"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="OPENGL" />
+
 </LinearLayout>
