--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -45,4 +45,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="CANVAS" />
+      <Button
+        android:id="@+id/btn_audio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="AUDIO" />
 </LinearLayout>
