--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,7 +1,22 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="AppTheme" parent="android:Theme.Light" >
-          <item name="android:windowNoTitle">true</item>
+    <style name="AppTheme" parent="android:Theme.Light">
+        <item name="android:windowNoTitle">true</item>
     </style>
 
+    <style name="SoundButton">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">@drawable/selector_btn_sound</item>
+       <item name="android:layout_margin">5dp</item>
+    </style>
+  <style name="ControlButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/selector_btn_control</item>
+       <item name="android:layout_margin">5dp</item>
+       <item name="android:padding">5dp</item>
+       <item name="android:textColor">#ffa8ffec</item>
+    </style>
 </resources>
