--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -1,53 +1,64 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="match_parent" >
 
-    <Button
-        android:id="@+id/btn_wisp"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="WISP" />
+        android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/btn_zoom"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="ZOOM" />
+        <Button
+            android:id="@+id/btn_wisp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="WISP" />
 
-    <Button
-        android:id="@+id/btn_qr"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="QRCODE" />
+        <Button
+            android:id="@+id/btn_zoom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ZOOM" />
 
-    <Button
-        android:id="@+id/btn_path"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="PATH" />
+        <Button
+            android:id="@+id/btn_qr"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="QRCODE" />
 
-    <Button
-        android:id="@+id/btn_memory"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="MEMORY" />
+        <Button
+            android:id="@+id/btn_path"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="PATH" />
 
-    <Button
-        android:id="@+id/btn_opengl"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="OPENGL" />
-    
-    <Button
-        android:id="@+id/btn_canvas"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="CANVAS" />
-      <Button
-        android:id="@+id/btn_audio"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="AUDIO" />
-</LinearLayout>
+        <Button
+            android:id="@+id/btn_memory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="MEMORY" />
+
+        <Button
+            android:id="@+id/btn_opengl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="OPENGL" />
+
+        <Button
+            android:id="@+id/btn_canvas"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="CANVAS" />
+
+        <Button
+            android:id="@+id/btn_audio"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="AUDIO" />
+          <Button
+            android:id="@+id/btn_rotate_img"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="RotateImg" />
+    </LinearLayout>
+
+</ScrollView>
