--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -54,11 +54,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="AUDIO" />
-          <Button
+
+        <Button
             android:id="@+id/btn_rotate_img"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="RotateImg" />
+
+        <Button
+            android:id="@+id/btn_game"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="GAME" />
     </LinearLayout>
 
 </ScrollView>
